added the start of  smelting system

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
   <div class="tab-buttons">
     <button id="antsAssignmentBtn">Ant Assignment</button>
     <button id="antsSacrificeBtn">Sacrifice Ants</button>
+    <button id="antsFurnaceBtn">Furnace</button>
   </div>
 
   <!-- Assignment subtab -->
@@ -189,10 +190,19 @@
       <div class="ants-right">
         <h2>Assignment Info</h2>
         <p>Additional information about ant assignments can go here.</p>
+      
+        
       </div>
+      </div>
+  </div>
+  <div id="ants-furnace" class="ants-subtab">
+    <div class="ants-container">
+    <div id="furnaceContainer">
+
+
+    </div>
     </div>
   </div>
-
   <!-- Sacrifice subtab -->
   <div id="ants-sacrifice" class="ants-subtab">
     <div class="ants-container">
